--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
 ### STS ###
 .apt_generated
 .classpath
@@ -39,3 +32,12 @@ out/
 *.zip
 *.tar.gz
 *.rar
+
+### Exclusions ###
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+
