--- a/sql/gradle/wrapper/gradle-wrapper.properties
+++ b/sql/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Mon Aug 26 14:20:14 MSK 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.2.1-bin.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
