--- a/bdd/akita/build.gradle
+++ b/bdd/akita/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
     repositories {
-        maven {
-            url 'https://dl.bintray.com/alfa-laboratory/maven-releases/'
-        }
+            jcenter()
+            mavenCentral()
     }
 
     dependencies {
