--- a/web/selenium/build.gradle
+++ b/web/selenium/build.gradle
@@ -6,14 +6,17 @@ group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.2.1'
 }
 
 test {
