--- a/reporting/selenide-reportportal/docker-compose.yml
+++ b/reporting/selenide-reportportal/docker-compose.yml
@@ -15,7 +15,7 @@ version: '2.4'
 services:
 
   gateway:
-    image: traefik:v2.0.5
+    image: traefik:v2.0.7
     ports:
       - "8080:8080" # HTTP exposed
       - "8081:8081" # HTTP Administration exposed
@@ -31,13 +31,16 @@ services:
     restart: always
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.3.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     volumes:
       - ./data/elasticsearch:/usr/share/elasticsearch/data
     environment:
+      - "ES_JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true"
       - "bootstrap.memory_lock=true"
       - "discovery.type=single-node"
       - "logger.level=INFO"
+      - "xpack.security.enabled=true"
+      - "ELASTIC_PASSWORD=elastic1q2w3e"
     ulimits:
       memlock:
         soft: -1
@@ -48,21 +51,74 @@ services:
       # ports:
       # - "9200:9200"
     healthcheck:
-      test: ["CMD", "curl","-s" ,"-f", "http://localhost:9200/_cat/health"]
+      test: ["CMD", "curl","-s" ,"-f", "http://elastic:elastic1q2w3e@localhost:9200/_cat/health"]
     restart: always
 
+  ## An analyzer instance for main functionality, don't forget to use the same storage settings (either MinIO, or filesystem) for analyzer_train
   analyzer:
-    image: reportportal/service-auto-analyzer:5.3.0
+    image: reportportal/service-auto-analyzer:5.7.3
     environment:
       LOGGING_LEVEL: info
+      AMQP_EXCHANGE_NAME: analyzer-default
+      AMQP_VIRTUAL_HOST: analyzer
       AMQP_URL: amqp://rabbitmq:rabbitmq@rabbitmq:5672
+      ES_HOSTS: http://elastic:elastic1q2w3e@elasticsearch:9200
+      MINIO_SHORT_HOST: minio:9000
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    depends_on:
+      elasticsearch:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    restart: always
+
+  ## An analyzer instance for training, don't forget to setup the same storage (either MinIO, or filesystem) as for main analyzer
+  analyzer_train:
+    image: reportportal/service-auto-analyzer:5.7.3
+    environment:
+      LOGGING_LEVEL: info
+      AMQP_EXCHANGE_NAME: analyzer-default
+      AMQP_VIRTUAL_HOST: analyzer
+      AMQP_URL: amqp://rabbitmq:rabbitmq@rabbitmq:5672
+      ES_HOSTS: http://elastic:elastic1q2w3e@elasticsearch:9200
+      MINIO_SHORT_HOST: minio:9000
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+      INSTANCE_TASK_TYPE: train
+      UWSGI_WORKERS: 1
+    depends_on:
+      elasticsearch:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    restart: always
+
+  ## Metrics service for analyzing how analyzer is working and manage retrained models
+  metrics-gatherer:
+    image: reportportal/service-metrics-gatherer:5.7.3
+    environment:
+      LOGGING_LEVEL: info
+      ES_HOST: http://elasticsearch:9200
+      ES_USER: elastic
+      ES_PASSWORD: elastic1q2w3e
+      POSTGRES_USER: "rpuser"
+      POSTGRES_PASSWORD: "rppass"
+      POSTGRES_DB: "reportportal"
+      POSTGRES_HOST: "postgres"
+      POSTGRES_PORT: 5432
+      ALLOWED_START_TIME: "22:00"
+      ALLOWED_END_TIME: "08:00"
+      #TZ: Europe/Minsk you can change a timezone like this to specify when metrics are gathered
+      AMQP_URL: amqp://rabbitmq:rabbitmq@rabbitmq:5672
+      AMQP_VIRTUAL_HOST: analyzer
     depends_on:
       - elasticsearch
     restart: always
 
-  ### Initial reportportal db schema. Run once.
+  ## Initial reportportal db schema. Run once.
   db-scripts:
-    image: reportportal/migrations:5.3.0
+    image: reportportal/migrations:5.7.3
     depends_on:
       postgres:
         condition: service_healthy
@@ -82,13 +138,13 @@ services:
       POSTGRES_PASSWORD: rppass
       POSTGRES_DB: reportportal
     volumes:
-      # For unix host
+      ## For unix host
       - ./data/postgres:/var/lib/postgresql/data
-      # For windows host
-      # - postgres:/var/lib/postgresql/data
-    # If you need to access the DB locally. Could be a security risk to expose DB.
-    #    ports:
-    #      - "5432:5432"
+      ## For windows host
+    #       - postgres:/var/lib/postgresql/data
+    ## If you need to access the DB locally. Could be a security risk to expose DB.
+    # ports:
+    #   - "5432:5432"
     command:
       -c checkpoint_completion_target=0.9
       -c work_mem=96MB
@@ -97,11 +153,11 @@ services:
       -c wal_buffers=32MB
       -c min_wal_size=2GB
       -c max_wal_size=4GB
-    # Optional, for SSD Data Storage. If you are using the HDD, set up this command to '2'
+    ## Optional, for SSD Data Storage. If you are using the HDD, set up this command to '2'
     #  -c effective_io_concurrency=200
-    # Optional, for SSD Data Storage. If you are using the HDD, set up this command to '4'
+    ## Optional, for SSD Data Storage. If you are using the HDD, set up this command to '4'
     #  -c random_page_cost=1.1
-    # Optional, can be scaled. Example for 4 CPU, 16GB RAM instance, where only the database is deployed
+    ## Optional, can be scaled. Example for 4 CPU, 16GB RAM instance, where only the database is deployed
     #  -c max_worker_processes=4
     #  -c max_parallel_workers_per_gather=2
     #  -c max_parallel_workers=4
@@ -117,9 +173,9 @@ services:
 
   rabbitmq:
     image: rabbitmq:3.7.16-management
-    #ports:
-      # - "5672:5672"
-      #- "15672:15672"
+    # ports:
+    #   - "5672:5672"
+    #   - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: "rabbitmq"
       RABBITMQ_DEFAULT_PASS: "rabbitmq"
@@ -129,9 +185,9 @@ services:
     restart: always
 
   uat:
-    image: reportportal/service-authorization:5.3.0
-    #ports:
-    #  - "9999:9999"
+    image: reportportal/service-authorization:5.7.3
+    # ports:
+    #   - "9999:9999"
     environment:
       - RP_DB_HOST=postgres
       - RP_DB_USER=rpuser
@@ -151,9 +207,12 @@ services:
       - "traefik.http.services.uat.loadbalancer.server.scheme=http"
       - "traefik.expose=true"
     restart: always
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   index:
-    image: reportportal/service-index:5.0.10
+    image: reportportal/service-index:5.7.3
     depends_on:
       gateway:
         condition: service_started
@@ -161,15 +220,15 @@ services:
       - LB_URL=http://gateway:8081
       - TRAEFIK_V2_MODE=true
     labels:
-        - "traefik.http.routers.index.rule=PathPrefix(`/`)"
-        - "traefik.http.routers.index.service=index"
-        - "traefik.http.services.index.loadbalancer.server.port=8080"
-        - "traefik.http.services.index.loadbalancer.server.scheme=http"
-        - "traefik.expose=true"
+      - "traefik.http.routers.index.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.index.service=index"
+      - "traefik.http.services.index.loadbalancer.server.port=8080"
+      - "traefik.http.services.index.loadbalancer.server.scheme=http"
+      - "traefik.expose=true"
     restart: always
 
   api:
-    image: reportportal/service-api:5.3.0
+    image: reportportal/service-api:5.7.3
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -186,11 +245,14 @@ services:
       - RP_AMQP_PASS=rabbitmq
       - RP_AMQP_APIUSER=rabbitmq
       - RP_AMQP_APIPASS=rabbitmq
+      - RP_AMQP_ANALYZER-VHOST=analyzer
       - RP_BINARYSTORE_TYPE=minio
       - RP_BINARYSTORE_MINIO_ENDPOINT=http://minio:9000
       - RP_BINARYSTORE_MINIO_ACCESSKEY=minio
       - RP_BINARYSTORE_MINIO_SECRETKEY=minio123
       - LOGGING_LEVEL_ORG_HIBERNATE_SQL=info
+      - RP_REQUESTLOGGING=false
+      - MANAGEMENT_HEALTH_ELASTICSEARCH_ENABLED=false
       - JAVA_OPTS=-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp  -Dcom.sun.management.jmxremote.rmi.port=12349 -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.local.only=false  -Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=0.0.0.0
     labels:
       - "traefik.http.middlewares.api-strip-prefix.stripprefix.prefixes=/api"
@@ -202,8 +264,50 @@ services:
       - "traefik.expose=true"
     restart: always
 
+  jobs:
+    image: reportportal/service-jobs:5.7.3
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      gateway:
+        condition: service_started
+      postgres:
+        condition: service_healthy
+    environment:
+      RP_DB_HOST: postgres
+      RP_DB_USER: rpuser
+      RP_DB_PASS: rppass
+      RP_DB_NAME: reportportal
+      RP_AMQP_USER: rabbitmq
+      RP_AMQP_PASS: rabbitmq
+      RP_AMQP_APIUSER: rabbitmq
+      RP_AMQP_APIPASS: rabbitmq
+      RP_AMQP_ANALYZER-VHOST: analyzer
+      DATASTORE_TYPE: minio
+      DATASTORE_MINIO_ENDPOINT: http://minio:9000
+      DATASTORE_MINIO_ACCESSKEY: minio
+      DATASTORE_MINIO_SECRETKEY: minio123
+      RP_ENVIRONMENT_VARIABLE_CLEAN_ATTACHMENT_CRON: 0 0 */24 * * *
+      RP_ENVIRONMENT_VARIABLE_CLEAN_LOG_CRON: 0 0 */24 * * *
+      RP_ENVIRONMENT_VARIABLE_CLEAN_LAUNCH_CRON: 0 0 */24 * * *
+      RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CRON: 0 0 */24 * * *
+      RP_ENVIRONMENT_VARIABLE_STORAGE_PROJECT_CRON: 0 */5 * * * *
+      RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CHUNKSIZE: 1000
+      RP_PROCESSING_LOG_MAXBATCHSIZE: 2000
+      RP_PROCESSING_LOG_MAXBATCHTIMEOUT: 6000
+      RP_AMQP_MAXLOGCONSUMER: 1
+    labels:
+      - traefik.http.middlewares.jobs-strip-prefix.stripprefix.prefixes=/jobs
+      - traefik.http.routers.jobs.middlewares=jobs-strip-prefix@docker
+      - traefik.http.routers.jobs.rule=PathPrefix(`/jobs`)
+      - traefik.http.routers.jobs.service=jobs
+      - traefik.http.services.jobs.loadbalancer.server.port=8686
+      - traefik.http.services.jobs.loadbalancer.server.scheme=http
+      - traefik.expose=true
+    restart: always
+
   ui:
-    image: reportportal/service-ui:5.3.0
+    image: reportportal/service-ui:5.7.3
     environment:
       - RP_SERVER_PORT=8080
     labels:
@@ -217,11 +321,14 @@ services:
     restart: always
 
   minio:
-    image: minio/minio:RELEASE.2020-05-01T22-19-14Z
+    image: minio/minio:RELEASE.2020-10-27T04-03-55Z
     #ports:
     #  - '9000:9000'
     volumes:
+      ## For unix host
       - ./data/storage:/data
+      ## For windows host
+    #       - minio:/data
     environment:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
@@ -233,6 +340,7 @@ services:
       retries: 3
     restart: always
 
-  # Docker volume for Windows host
-#volumes:
-#  postgres:
+## Docker volume for Windows host
+# volumes:
+#   postgres:
+#   minio:
