обновил пример кода в проекте на Selenium

--- a/web/selenium/build.gradle
+++ b/web/selenium/build.gradle
@@ -14,8 +14,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
 }
 
 test {
