--- a/bdd/cucumber/build.gradle
+++ b/bdd/cucumber/build.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
-    testImplementation 'com.codeborne:selenide:6.17.1'
+    testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'io.cucumber:cucumber-java:7.1.0'
     testImplementation 'io.cucumber:cucumber-junit:7.1.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
@@ -26,5 +26,6 @@ dependencies {
 
 test {
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_leak_detection=false")
 }
 
