--- a/sql/build.gradle
+++ b/sql/build.gradle
@@ -20,10 +20,9 @@ dependencies {
     testImplementation 'mysql:mysql-connector-java:8.0.22'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'com.codeborne:selenide:6.19.1'
     testCompileOnly 'org.projectlombok:lombok:1.18.36'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.3'
 }
 
 test {
